--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hexcolor: ^3.0.1
   carousel_slider: ^5.0.0
   connectivity_plus: ^6.1.0
+  fluttertoast: ^8.2.10
 #  lottie: ^3.3.0
 
 
